--- a/index.html
+++ b/index.html
@@ -59,6 +59,65 @@
     </div>
   </div>
 
+  <table>
+    <tbody>
+    </tbody>
+    <tr>
+      <th>Table Header 0</th>
+      <td>lorem ipsum</td>
+      <td>dolor amet</td>
+      <td>meggings </td>
+      <td>braid</td>
+      <td>readymade</td>
+      <td>leggings</td>
+    </tr>
+    <tr>
+      <th>Table Header 1</th>
+      <td>lorem ipsum</td>
+      <td>dolor amet</td>
+      <td>meggings </td>
+      <td>braid</td>
+      <td>readymade</td>
+      <td>leggings</td>
+    </tr>
+    <tr>
+      <th>Table Header 2</th>
+      <td>lorem ipsum</td>
+      <td>dolor amet</td>
+      <td>meggings </td>
+      <td>braid</td>
+      <td>readymade</td>
+      <td>leggings</td>
+    </tr>
+    <tr>
+      <th>Table Header 3</th>
+      <td>lorem ipsum</td>
+      <td>dolor amet</td>
+      <td>meggings </td>
+      <td>braid</td>
+      <td>readymade</td>
+      <td>leggings</td>
+    </tr>
+    <tr>
+      <th>Table Header 4</th>
+      <td>lorem ipsum</td>
+      <td>dolor amet</td>
+      <td>meggings </td>
+      <td>braid</td>
+      <td>readymade</td>
+      <td>leggings</td>
+    </tr>
+    <tr>
+      <th>Table Header 5</th>
+      <td>lorem ipsum</td>
+      <td>dolor amet</td>
+      <td>meggings </td>
+      <td>braid</td>
+      <td>readymade</td>
+      <td>leggings</td>
+    </tr>
+  </table>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
